added Test and 70/80% Coverage